# pose_estimate

./: CMakeLists.txt  README.md  pose_estimate.cpp  realsense.cpp
include/: realsense.hpp
python_version/: calibration.py  capture_image.py  pose_estimate.py
